feat: [PLG-2434]: Added API endpoint for retrieving a Stripe client secret (#48688)
* [PLG-2434]: Added API endpoint for retrieving a Stripe client secret

* [PLG-2434]: Minor fixes

* [PLG-2434]: Minor fixes

* [PLG-2434]: API description fixes

* [PLG-2434]: Format fix

* [PLG-2434]: Fixed compiler error

* [PLG-2434]: GET -> POST & some renaming